set (WAMR_BUILD_PLATFORM "riot")
set (WAMR_BUILD_TARGET "ARM")

#set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")

#add_library( wamr ${WAMR_RUNTIME_LIB_SOURCE})

#set(WAMR_DIR ../../build/pkg/wamr)

#set (CMAKE_VERBOSE_MAKEFILE 1)

#include_directories($(WAMR_DIR)/core/app-framework/base/native)
#set (APP_FRAMEWORK_INCLUDE_TYPE     "APP")